--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -32,13 +32,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-14_14:05:03,891 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+      "2023-04-17_14:44:32,478 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
-    "from h5rdmtoolbox.conventions import layout"
+    "from h5rdmtoolbox.conventions.layout import Layout, Any, Regex"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "a3e4b8c4-6724-48f9-9366-dead8e067080",
    "metadata": {},
    "source": [
-    "Initialize a `File` object:"
+    "Initialize a `Layout` object:"
    ]
   },
   {
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "lay = layout.Layout()"
+    "lay = Layout()"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "id": "2b9415c9-5a4a-4476-b1fb-294f4a7c9bee",
    "metadata": {},
    "source": [
-    "Let's require the user to set the root attribute \"version\", which holds the current version of this package:"
+    "Let's require the user to set the root attribute \"h5rdmtoolbox_version\", which holds the current version of this package:"
    ]
   },
   {
@@ -94,7 +94,47 @@
    },
    "outputs": [],
    "source": [
-    "lay['/'].attrs['version'] = h5tbx.__version__"
+    "lay['/'].attrs['h5rdmtoolbox_version'] = h5tbx.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d23e829-c045-459a-9275-8f37f487562e",
+   "metadata": {},
+   "source": [
+    "Any other attribute `version` shall follow the regular expression `^v\\d+\\.\\d+\\.\\d+$`. We donnot specify the location of the attribute. It could be the attribute of group or a dataset. Wherever the attribute `version` is used, the regular expression is checked."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b8f048fd-99a9-472b-991f-6331c8e231fb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lay['*'].attrs['version'] = Regex(reference=r'^v\\d+\\.\\d+\\.\\d+$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71716a7f-a90f-4aea-bbbc-e3eaca623af6",
+   "metadata": {},
+   "source": [
+    "If we only require an attribute to exist but the value is not further specify, we can use the `Ellipsis` object `...`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f2633715-90dd-4786-a237-a5f97a9e58e7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lay['/'].attrs['title'] = ... # or: layout.attrs.Exists()"
    ]
   },
   {
@@ -107,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "71b22360-f4f4-4260-b641-69e6c69c5d4d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "lay['*'].group().attrs['long_name'] = layout.Any()"
+    "lay['*'].attrs['long_name'] = ..."
    ]
   },
   {
@@ -127,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6e0bc80d-2277-48b9-b117-305d63d89002",
    "metadata": {
     "tags": []
@@ -136,16 +176,16 @@
     {
      "data": {
       "text/plain": [
-       "GroupValidation(path=\"/\")"
+       "GroupValidation(Equal(\"device\"), opt=False)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lay['/'].group('device')"
+    "lay['/'].define_group('device')"
    ]
   },
   {
@@ -158,40 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5c059f-754c-405a-b0bd-a33a5f0ff3a6",
-   "metadata": {},
-   "source": [
-    "Let's see which \"validators\" we defined until now (validators are the specifications we set. they will be called in a sequence later on)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a3c72571-813a-443c-a516-b557acd64d08",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Layout File (3 validators):\n",
-       " [0] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B287CD0>\n",
-       " [1] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2AB1F0>\n",
-       " [2] GroupValidation(path=\"/\")>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lay"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "273bc2f7-a088-40de-8ea7-f16b10a11e75",
    "metadata": {},
    "source": [
@@ -200,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "45b3ad48-fc27-4cd3-a1c7-7743c35594ea",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#lay['*'].dataset()#.attrs['standard_name'] = layout.Any()"
+    "lay['*'].define_dataset().attrs['standard_name'] = Any()"
    ]
   },
   {
@@ -220,50 +226,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "055e871f-ba1a-4b9b-908a-b105d9439a59",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Layout File (3 validators):\n",
-       " [0] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B287CD0>\n",
-       " [1] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2AB1F0>\n",
-       " [2] GroupValidation(path=\"/\")>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lay"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
-   "id": "0272ae42-95b9-4ca5-8449-cbe10b572b01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#awdawd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "12e98555-677d-4f33-a0ef-abb6adf605a5",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#lay['fluid/*'].dataset().attrs['units'] = layout.Any()"
+    "lay['fluid/*'].define_dataset().attrs['units'] = 'm/s'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1a401a3f-89cd-492a-ac2f-9253fea23a7e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AttributeValidation(Equal(\"h5rdmtoolbox_version\"), opt=False)>\n",
+      "  AttributeValidation(Equal(\"0.4.0a1\"), opt=False)>\n",
+      "GroupValidation(Equal(\"*\"), opt=False)>\n",
+      "  AttributeValidation(Equal(\"version\"), opt=False)>\n",
+      "    AttributeValidation(Regex(\"^v\\d+\\.\\d+\\.\\d+$\"), opt=False)>\n",
+      "  AttributeValidation(Equal(\"long_name\"), opt=False)>\n",
+      "    AttributeValidation(Any(opt=True), opt=False)>\n",
+      "  DatasetValidation(Any(opt=True), opt=True)>\n",
+      "    AttributeValidation(Equal(\"standard_name\"), opt=False)>\n",
+      "      AttributeValidation(Any(opt=True), opt=False)>\n",
+      "AttributeValidation(Equal(\"title\"), opt=False)>\n",
+      "  AttributeValidation(Any(opt=True), opt=False)>\n",
+      "GroupValidation(Equal(\"device\"), opt=False)>\n",
+      "GroupValidation(Equal(\"fluid/*\"), opt=False)>\n",
+      "  DatasetValidation(Any(opt=True), opt=True)>\n",
+      "    AttributeValidation(Equal(\"units\"), opt=False)>\n",
+      "      AttributeValidation(Equal(\"m/s\"), opt=False)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "lay.dumps()"
    ]
   },
   {
@@ -284,14 +290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9471245e-c34e-4752-b66e-dc8bcfffe93d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetValidation(Regex(\"^[x-z]_coordinate\"), opt=False)>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#lay['*'].dataset(name=layout.Regex('^[x-z]_coordinate'), ndim=1)"
+    "lay['*'].define_dataset(name=Regex('^[x-z]_coordinate'), ndim=1)"
    ]
   },
   {
@@ -306,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a04e4b68-c604-46d5-ac63-8902a9d77d61",
    "metadata": {
     "tags": []
@@ -518,8 +535,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4759276800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4759276800\">\n",
+       "                        <input id=\"group-ds--10427849700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10427849700\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -554,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "bf51d18c-cb84-4e9b-ac5e-590bf3b0c0c3",
    "metadata": {
     "tags": []
@@ -563,17 +580,46 @@
     {
      "data": {
       "text/plain": [
-       "<ValidationResults(issues: 3)>"
+       "[ValidationResult(AttributeValidation(Equal(\"h5rdmtoolbox_version\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"version\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"long_name\"), opt=False)>, False),\n",
+       " ValidationResult(DatasetValidation(Regex(\"^[x-z]_coordinate\"), opt=False)>, False),\n",
+       " ValidationResult(GroupValidation(Equal(\"*\"), opt=False)>, True),\n",
+       " ValidationResult(AttributeValidation(Equal(\"title\"), opt=False)>, False),\n",
+       " ValidationResult(GroupValidation(Equal(\"device\"), opt=False)>, False),\n",
+       " ValidationResult(GroupValidation(Equal(\"fluid/*\"), opt=False)>, False)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = lay.validate(h5.hdf_filename)\n",
-    "res"
+    "lay.validate(h5.hdf_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bdf32a53-289b-4c86-b085-adbea6ab2892",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lay.fails"
    ]
   },
   {
@@ -582,28 +628,6 @@
    "metadata": {},
    "source": [
     "To find out what the issues are, best is to `report()` the issue messages. Note, some issues are \"hidden\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "f3b43e42-9222-4dd3-8a9d-0312843eb8d9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2BBBB0>\n",
-      "<h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2CE2B0>\n",
-      "GroupValidation(path=\"/\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "res.report()"
    ]
   },
   {
@@ -616,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "1f2143ab-cbad-499f-8068-080e59ebec74",
    "metadata": {
     "tags": []
@@ -625,19 +649,47 @@
     {
      "data": {
       "text/plain": [
-       "<ValidationResults(issues: 2)>"
+       "6"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "with h5tbx.File() as h5:\n",
-    "    h5.attrs['version'] = h5tbx.__version__\n",
-    "    res2 = lay.validate(h5)\n",
-    "res2"
+    "    h5.attrs['h5rdmtoolbox_version'] = h5tbx.__version__\n",
+    "    lay.validate(h5)\n",
+    "lay.fails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "620139b4-2a91-48b1-84dc-4ff0b0fe67fc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ValidationResult(AttributeValidation(Equal(\"version\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"long_name\"), opt=False)>, False),\n",
+       " ValidationResult(DatasetValidation(Regex(\"^[x-z]_coordinate\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"title\"), opt=False)>, False),\n",
+       " ValidationResult(GroupValidation(Equal(\"device\"), opt=False)>, False),\n",
+       " ValidationResult(GroupValidation(Equal(\"fluid/*\"), opt=False)>, False)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lay.get_failed()"
    ]
   },
   {
@@ -650,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "49a0ed8f-e8e0-446a-bf55-73e05652b2f6",
    "metadata": {
     "tags": []
@@ -659,19 +711,30 @@
     {
      "data": {
       "text/plain": [
-       "<ValidationResults(issues: 2)>"
+       "[ValidationResult(AttributeValidation(Equal(\"h5rdmtoolbox_version\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"version\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"long_name\"), opt=False)>, False),\n",
+       " ValidationResult(DatasetValidation(Regex(\"^[x-z]_coordinate\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"version\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"long_name\"), opt=False)>, False),\n",
+       " ValidationResult(DatasetValidation(Regex(\"^[x-z]_coordinate\"), opt=False)>, False),\n",
+       " ValidationResult(AttributeValidation(Equal(\"title\"), opt=False)>, False),\n",
+       " ValidationResult(GroupValidation(Equal(\"device\"), opt=False)>, False),\n",
+       " ValidationResult(GroupValidation(Equal(\"fluid/*\"), opt=False)>, False)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "with h5tbx.File() as h5:\n",
-    "    h5.attrs['version'] = h5tbx.__version__\n",
-    "    res2 = lay.validate(h5)\n",
-    "res2"
+    "    g = h5.create_group('fluid')\n",
+    "    g.attrs['units'] = 'm/s'\n",
+    "    lay.validate(h5)\n",
+    "lay.fails\n",
+    "lay.get_failed()"
    ]
   },
   {
@@ -684,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "73e710a5-79a5-4528-964f-b40b4fed3b09",
    "metadata": {
     "tags": []
@@ -704,25 +767,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c17da1cb-821b-4187-85ab-2ea58b0d13d4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LayoutRegistry(\"tbx\",)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "layout.Layout.Registry()"
+    "#layout.Layout.Registry()"
    ]
   },
   {
