fixes and version correction

--- a/docs/wrapper/DatasetSlicing.ipynb
+++ b/docs/wrapper/DatasetSlicing.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "## Dataset slicing\n",
+    "# Dataset slicing\n",
     "\n",
     "Differently to the `h5py` package, `xarray.DataArray` is returned and not `numpy.ndarray`. This is to provide the concept of dimension scales back to the user as `xarray` objects have dimensions (and coordinates), too:"
    ]
@@ -17,7 +17,15 @@
    "execution_count": 1,
    "id": "9fc2b312-16d5-4aa7-8f10-9107a2e53c08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-20_15:19:51,202 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "import numpy as np"
@@ -396,23 +404,23 @@
        "  fill: currentColor;\n",
        "}\n",
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;data&#x27; (y: 3, x: 5)&gt;\n",
-       "array([[0.56625169, 0.92298057, 0.27625989, 0.94375499, 0.47957635],\n",
-       "       [0.60986074, 0.26077822, 0.12290019, 0.69191237, 0.3698676 ],\n",
-       "       [0.84252403, 0.1127556 , 0.23683577, 0.41908397, 0.77097471]])\n",
+       "array([[0.82713142, 0.0609308 , 0.40066875, 0.57141572, 0.77573125],\n",
+       "       [0.53401068, 0.28331382, 0.83048604, 0.64958457, 0.64641465],\n",
+       "       [0.49237733, 0.90623456, 0.84421691, 0.86140919, 0.03654883]])\n",
        "Coordinates:\n",
        "  * y        (y) float64 0.0 2.5 5.0\n",
        "  * x        (x) float64 0.0 2.5 5.0 7.5 10.0\n",
        "Attributes:\n",
        "    long_name:  velocity\n",
-       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'data'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>y</span>: 3</li><li><span class='xr-has-index'>x</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-d011e665-5ec6-4c00-a5c5-0afb91fcc654' class='xr-array-in' type='checkbox' checked><label for='section-d011e665-5ec6-4c00-a5c5-0afb91fcc654' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5663 0.923 0.2763 0.9438 0.4796 ... 0.1128 0.2368 0.4191 0.771</span></div><div class='xr-array-data'><pre>array([[0.56625169, 0.92298057, 0.27625989, 0.94375499, 0.47957635],\n",
-       "       [0.60986074, 0.26077822, 0.12290019, 0.69191237, 0.3698676 ],\n",
-       "       [0.84252403, 0.1127556 , 0.23683577, 0.41908397, 0.77097471]])</pre></div></div></li><li class='xr-section-item'><input id='section-ea49f0a2-4e81-4920-b45a-7bc742b46eb2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ea49f0a2-4e81-4920-b45a-7bc742b46eb2' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 2.5 5.0</div><input id='attrs-c51796e3-b944-44ec-ae8b-fb3340018396' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-c51796e3-b944-44ec-ae8b-fb3340018396' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f3663e6b-39c2-4471-aa66-f110c3ea4050' class='xr-var-data-in' type='checkbox'><label for='data-f3663e6b-39c2-4471-aa66-f110c3ea4050' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>y</dd><dt><span>units :</span></dt><dd>mm</dd></dl></div><div class='xr-var-data'><pre>array([0. , 2.5, 5. ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 2.5 5.0 7.5 10.0</div><input id='attrs-da1a96a1-114e-4be8-815d-9a46053426dc' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-da1a96a1-114e-4be8-815d-9a46053426dc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-11e30d07-9883-473c-aad5-cfe6db4666c9' class='xr-var-data-in' type='checkbox'><label for='data-11e30d07-9883-473c-aad5-cfe6db4666c9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>x</dd><dt><span>units :</span></dt><dd>mm</dd></dl></div><div class='xr-var-data'><pre>array([ 0. ,  2.5,  5. ,  7.5, 10. ])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-39db6271-9145-4a14-854c-0e383e032cb8' class='xr-section-summary-in' type='checkbox'  ><label for='section-39db6271-9145-4a14-854c-0e383e032cb8' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-498e4fd1-fb78-45a5-97df-3e0d422ce163' class='xr-index-data-in' type='checkbox'/><label for='index-498e4fd1-fb78-45a5-97df-3e0d422ce163' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([0.0, 2.5, 5.0], dtype=&#x27;float64&#x27;, name=&#x27;y&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-f9b10e72-4858-429f-97c4-f03a103ee692' class='xr-index-data-in' type='checkbox'/><label for='index-f9b10e72-4858-429f-97c4-f03a103ee692' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([0.0, 2.5, 5.0, 7.5, 10.0], dtype=&#x27;float64&#x27;, name=&#x27;x&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-502107e5-cf21-4038-af65-38f192023bd7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-502107e5-cf21-4038-af65-38f192023bd7' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>velocity</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
+       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'data'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>y</span>: 3</li><li><span class='xr-has-index'>x</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-6640355a-ae47-491e-8c0f-0542b6f0ef5d' class='xr-array-in' type='checkbox' checked><label for='section-6640355a-ae47-491e-8c0f-0542b6f0ef5d' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.8271 0.06093 0.4007 0.5714 0.7757 ... 0.9062 0.8442 0.8614 0.03655</span></div><div class='xr-array-data'><pre>array([[0.82713142, 0.0609308 , 0.40066875, 0.57141572, 0.77573125],\n",
+       "       [0.53401068, 0.28331382, 0.83048604, 0.64958457, 0.64641465],\n",
+       "       [0.49237733, 0.90623456, 0.84421691, 0.86140919, 0.03654883]])</pre></div></div></li><li class='xr-section-item'><input id='section-e0884617-8ed0-40c0-9ee0-9127204eb649' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e0884617-8ed0-40c0-9ee0-9127204eb649' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 2.5 5.0</div><input id='attrs-21dffd2c-d368-4be3-8bef-579b9d72ab61' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-21dffd2c-d368-4be3-8bef-579b9d72ab61' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5794c5b7-776c-46c3-8426-6052fb0bda57' class='xr-var-data-in' type='checkbox'><label for='data-5794c5b7-776c-46c3-8426-6052fb0bda57' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>y</dd><dt><span>units :</span></dt><dd>mm</dd></dl></div><div class='xr-var-data'><pre>array([0. , 2.5, 5. ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 2.5 5.0 7.5 10.0</div><input id='attrs-f1eb2ea1-d1d7-4d5a-a676-13030717251c' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-f1eb2ea1-d1d7-4d5a-a676-13030717251c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-de279fbb-43be-4646-b7fb-0c56b7f978a8' class='xr-var-data-in' type='checkbox'><label for='data-de279fbb-43be-4646-b7fb-0c56b7f978a8' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>x</dd><dt><span>units :</span></dt><dd>mm</dd></dl></div><div class='xr-var-data'><pre>array([ 0. ,  2.5,  5. ,  7.5, 10. ])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-8efd104e-467a-4a94-aba5-582746901cf1' class='xr-section-summary-in' type='checkbox'  ><label for='section-8efd104e-467a-4a94-aba5-582746901cf1' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-d419b826-0a9a-4ac3-9fbd-5fe466397124' class='xr-index-data-in' type='checkbox'/><label for='index-d419b826-0a9a-4ac3-9fbd-5fe466397124' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([0.0, 2.5, 5.0], dtype=&#x27;float64&#x27;, name=&#x27;y&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-3520e173-0caa-46c1-8879-31f34d909756' class='xr-index-data-in' type='checkbox'/><label for='index-3520e173-0caa-46c1-8879-31f34d909756' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([0.0, 2.5, 5.0, 7.5, 10.0], dtype=&#x27;float64&#x27;, name=&#x27;x&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-aafb1efb-613b-4865-bfc8-ea5882c62d01' class='xr-section-summary-in' type='checkbox'  checked><label for='section-aafb1efb-613b-4865-bfc8-ea5882c62d01' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>velocity</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'data' (y: 3, x: 5)>\n",
-       "array([[0.56625169, 0.92298057, 0.27625989, 0.94375499, 0.47957635],\n",
-       "       [0.60986074, 0.26077822, 0.12290019, 0.69191237, 0.3698676 ],\n",
-       "       [0.84252403, 0.1127556 , 0.23683577, 0.41908397, 0.77097471]])\n",
+       "array([[0.82713142, 0.0609308 , 0.40066875, 0.57141572, 0.77573125],\n",
+       "       [0.53401068, 0.28331382, 0.83048604, 0.64958457, 0.64641465],\n",
+       "       [0.49237733, 0.90623456, 0.84421691, 0.86140919, 0.03654883]])\n",
        "Coordinates:\n",
        "  * y        (y) float64 0.0 2.5 5.0\n",
        "  * x        (x) float64 0.0 2.5 5.0 7.5 10.0\n",
@@ -458,9 +466,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.56625169, 0.92298057, 0.27625989, 0.94375499, 0.47957635],\n",
-       "       [0.60986074, 0.26077822, 0.12290019, 0.69191237, 0.3698676 ],\n",
-       "       [0.84252403, 0.1127556 , 0.23683577, 0.41908397, 0.77097471]])"
+       "array([[0.82713142, 0.0609308 , 0.40066875, 0.57141572, 0.77573125],\n",
+       "       [0.53401068, 0.28331382, 0.83048604, 0.64958457, 0.64641465],\n",
+       "       [0.49237733, 0.90623456, 0.84421691, 0.86140919, 0.03654883]])"
       ]
      },
      "execution_count": 3,
