--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -5,7 +5,7 @@
    "id": "db1f241d-601e-4422-883a-7905830a1a9c",
    "metadata": {},
    "source": [
-    "## Group creation\n",
+    "# Group creation\n",
     "The default group creation is not much different except that you can optionally pass attributes as a dictionary during goup initialization.\n",
     "\n",
     "Furthermore, it is also possible to overwrite an existing group by passing `overwrite=True`.\n",
@@ -20,7 +20,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-20_15:25:11,622 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "\n",
@@ -60,7 +68,7 @@
    "id": "656b228d-aacc-4e4c-b78a-a793e37d0fae",
    "metadata": {},
    "source": [
-    "## Group exploration\n",
+    "# Group exploration\n",
     "\n",
     "Sometimes it is helpful to get all all groups of a current group:"
    ]
@@ -116,7 +124,7 @@
    "id": "2c083948-8661-46ea-9b51-c44ad4a9a9e2",
    "metadata": {},
    "source": [
-    "## Meta convention: Static layouts:\n",
+    "# Meta convention: Static layouts:\n",
     "\n",
     "Each HDF wrapper class must fulfill certain requirements, e.g.\n",
     " - to have specific attributes\n",
@@ -140,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "[]\n"
      ]
     }
    ],
@@ -165,19 +173,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3ma: __h5rdmtoolbox__\u001b[0m: __version of this package\n"
+      "Layout Validation report\n",
+      "------------------------\n",
+      "Number of validations (called/specified): 0/0\n",
+      "Number of inactive validations: 0\n",
+      "Success rate: 100.0% (n_fails=0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\layout\\core.py:597: UserWarning: No specifications registered to this layout, thus success ratio will always be 1.0\n",
+      "  warnings.warn('No specifications registered to this layout, thus success '\n"
      ]
     }
    ],
    "source": [
     "with h5tbx.File(test_filename) as h5:\n",
-    "    h5.layout.sdump()"
+    "    lay = h5.layout\n",
+    "    lay.validate(h5)\n",
+    "    lay.report()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7c5cee-d7c3-43b9-89e8-ed44ba225620",
+   "id": "3e854c4b-fe0b-403a-8155-3286778afec0",
    "metadata": {},
    "outputs": [],
    "source": []
